JEP389/419 Foreign Linker API: DownCall (Phase 2 & 3 / struct support)
The change aims to support the struct type on the arguments and the
return value in the the downcall handle to the C function.

Signed-off-by: Cheng Jin <jincheng@ca.ibm.com>